Fix body height in firefox and overflow scrolling in mobile webkit. Slight tweak to dashboard.

--- a/php/1/assets/css-sg/style-old-ie.css
+++ b/php/1/assets/css-sg/style-old-ie.css
@@ -170,7 +170,7 @@ body.new-zanata,
 .new-zanata-base-inner {
   margin: 0;
   background: #f0f2f4;
-  -webkit-overflow-scroll: touch;
+  -webkit-overflow-scrolling: touch;
 }
 
 /*
@@ -2161,12 +2161,15 @@ Sub-headings can be used when placing a heading under another heading.
   z-index: 1;
   width: 100%;
   min-height: 100%;
+  height: 100%;
+  overflow: auto;
   background-color: #f0f2f4;
   -webkit-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -moz-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -o-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -webkit-backface-visibility: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .off-canvas__toggle, .off-canvas__toggle--left, .off-canvas__toggle--right, .new-zanata .off-canvas__close {
